-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.3.1
-
-
10fa5f6bfe07c26e33e9284bdec753fde0436fc2
Warning: mobile/GridCell.qml:37:16: Property "callLater" is a QJSValue property. It may or may not be a method. Use a regular Q_INVOKABLE instead.
Qt.callLater(delaySetText, 6)
^^^^^^^^^
- duplicates
-
QTBUG-101464
Support Qt.callLater
-
- Open
-
- resulted in
-
QTBUG-104597 qmllint: callJSValue test should use custom qmltypes file
-
- Closed
-