Make callLater an invokable using QQmlV4Function

While we really do not like QQmlV4Function, it is still better than
creating an invokable property to define a method.
This way, qmllint at least knows that it is a function.

Fixes: QTBUG-104574
Change-Id: I8342c96163f6a79ab6dd92116407f64b5e156760
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>