src/qml/qml/qqmldelayedcallqueue_p.h
@@ -24,6 +24,8 @@
 
 QT_BEGIN_NAMESPACE
 
+class QQmlV4Function;
+
 class QQmlDelayedCallQueue : public QObject
 {
     Q_OBJECT
@@ -33,9 +35,8 @@ public:
 
     void init(QV4::ExecutionEngine *);
 
-    static QV4::ReturnedValue addUniquelyAndExecuteLater(
-            const QV4::FunctionObject *, const QV4::Value *thisObject,
-            const QV4::Value *argv, int argc);
+    static QV4::ReturnedValue addUniquelyAndExecuteLater(QV4::ExecutionEngine *engine,
+            QQmlV4Function *args);
 
 public Q_SLOTS:
     void ticked();
@@ -55,7 +56,7 @@ private:
         bool m_guarded;
     };
 
-    void storeAnyArguments(DelayedFunctionCall& dfc, const QV4::Value *argv, int argc, int offset, QV4::ExecutionEngine *engine);
+    void storeAnyArguments(DelayedFunctionCall& dfc, QQmlV4Function *args, int offset, QV4::ExecutionEngine *engine);
     void executeAllExpired_Later();
 
     QV4::ExecutionEngine *m_engine;
