tests/auto/qml/qmllint/data/callLater.qml
@@ -1,0 +1,5 @@
+import QtQuick
+
+Item {
+    Component.onCompleted: Qt.callLater(console.log, "hello, World")
+}
